Fixed small alignment issue on buttons

--- a/css/style.css
+++ b/css/style.css
@@ -61,12 +61,12 @@ input[type="text"], input[type="submit"] {
     border: 1px solid #fff;
     border-radius: 32px;
     background-color: #fff;
+    text-align: center;
     -moz-box-sizing:border-box;
     -webkit-box-sizing:border-box;
     box-sizing:border-box; }
 
 input[type="text"] {
-    text-align: center;
     width: 100%; }
 
 input[type="text"]::placeholder {
@@ -155,5 +155,5 @@ p {
         border-right: 0px;
         box-shadow: 0px 4px 4px #EEE; }
     li {
-        margin-right: 0; }
+        margin-right: 0em; }
 }
